--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,23 +1,33 @@
-body, html {
- 
+html{
   height: 100%;
+}
+body{ 
   padding: 0;
   margin: 0;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+
 }
 
 #map {
-  height: 100%;
-  width: 70%;
-}
-
-#show {
-  padding: 15px;
-  border: 1px solid black
-}
-
-.info-window{
+  height: 100%;  
 
 }
+
+#show { 
+  padding: 10px;
+  height: 100vh;
+}
+
+
+
+#show h3{
+  margin-bottom: -3px;
+}
+
+
+
 .info-window.title{  
   line-height: 0.5em;
   font-weight: 600;
